--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /vendor/
 /app/cache/*
 /app/logs/*
+/app/config/config_dev_local.yml
+/app/config/config_prod_local.yml
+/app/config/config_test_local.yml
