--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -5,9 +5,9 @@ app.config:
     error_handler: false
     test: ~
 
-webprofiler.config:
-    toolbar: false
-    intercept_redirects: false
+#webprofiler.config:
+    #toolbar: false
+    #intercept_redirects: false
 
 zend.config:
     logger:
