--- a/app/config/config_dev_local.yml.dist
+++ b/app/config/config_dev_local.yml.dist
@@ -11,3 +11,8 @@ doctrine.dbal:
       password:             ~
       host:                 localhost
       port:                 ~
+
+parameters:
+  adminEmailAddress:        name@domain.com
+  adminEmailName:           WebSite Admin
+  copyrightBy:              My Company
